Replication Framework/services_creators/yamls-to-apply/emailservice-apply/emailservice-deploy-4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice-4
spec:
  selector:
    matchLabels:
      app: emailservice-4
  template:
    metadata:
      labels:
        app: emailservice-4
    spec:
      containers:
      - env:
        - name: PORT
          value: '44470'
        - name: DISABLE_PROFILER
          value: '1'
        image: gcr.io/google-samples/microservices-demo/emailservice:v0.5.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:44470
          periodSeconds: 5
        name: server
        ports:
        - containerPort: 44470
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:44470
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
