Replication Framework/services_creators/yamls-to-apply/emailservice-apply/emailservice-svc-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice-3
spec:
  ports:
  - name: grpc
    port: 56335
    targetPort: 56335
  selector:
    app: emailservice-3
  type: ClusterIP
