Replication Framework/services_creators/yamls-to-apply/emailservice-apply/emailservice-svc-5.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice-5
spec:
  ports:
  - name: grpc
    port: 39734
    targetPort: 39734
  selector:
    app: emailservice-5
  type: ClusterIP
