Replication Framework/services_creators/yamls-to-apply/emailservice-apply/emailservice-svc-6.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice-6
spec:
  ports:
  - name: grpc
    port: 11942
    targetPort: 11942
  selector:
    app: emailservice-6
  type: ClusterIP
