Replication Framework/services_creators/yamls-to-apply/emailservice-apply/emailservice-netpol-4-checkoutservice-4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: emailservice-4-allow-checkoutservice-4
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice-4
    ports:
    - port: 44470
  podSelector:
    matchLabels:
      app: emailservice-4
